samples/_failures_safe/1761504956_486848_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a5b4e31.c: In function ‘determinant’:
./samples/SAFE/__tmp_2a5b4e31.c:132:9: error: expected identifier or ‘(’ at end of input
  132 |         int
      |         ^~~
./samples/SAFE/__tmp_2a5b4e31.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2a5b4e31.c:132:9: error: expected declaration or statement at end of input
